Use "valueOf".
Call to constructor is deprecated in Java 11.